# Mai_arch_lab2

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.yaml  openapi.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml  static_config.yaml.bak
src/: main.cpp
src/handlers/: auth_login.cpp  auth_login.hpp  auth_utils.hpp  books_create.cpp  books_create.hpp  books_get.cpp  books_get.hpp  loans_create.cpp  loans_create.hpp  loans_get.cpp  loans_get.hpp  loans_return.cpp  loans_return.hpp  users_create.cpp  users_create.hpp  users_get.cpp  users_get.hpp
src/middlewares/: auth_middleware.cpp  auth_middleware.hpp
src/models/: book.hpp  loan.hpp  user.hpp
src/storage/: library_storage.cpp  library_storage.hpp  library_storage_component.cpp  library_storage_component.hpp
tests/: conftest.py  error_tests.sh  smoke_tests.sh
